authService/manifest/auth-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: microservices

spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: auth-service:1.1.1
          imagePullPolicy: NEVER
          ports:
            - containerPort: 5001
