authService/manifest/rabbitmq.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.12-management
          ports:
            - containerPort: 5672
            - containerPort: 15672
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: rabbitmq
#   namespace: microservices
# spec:
#   selector:
#     app: rabbitmq
#   ports:
#     - protocol: TCP
#       port: 5672
#       targetPort: 5672
#     - protocol: TCP
#       port: 15672
#       targetPort: 15672
