authService/manifest/postgres.yml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: microservices
spec:
  selector:
    app: postgresql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgresql
          image: postgres:12-alpine
          ports:
            - containerPort: 5432
