authService/manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: microservices

spec:
  type: NodePort
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001

---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: microservices
spec:
  selector:
    app: postgresql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: microservices
spec:
  selector:
    app: rabbitmq
  ports:
    - name: rabbitmq
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: rabbitmq-management
      protocol: TCP
      port: 15672
      targetPort: 15672
